--- a/index.html
+++ b/index.html
@@ -257,4 +257,4 @@ function startPolling() {
   pollFn();
 
   // 🔹 Then start interval
-  pollTimer = setInterval(pollFn, POLL_MS); give whole update
+  pollTimer = setInterval(pollFn, POLL_MS); 
