--- a/index.html
+++ b/index.html
@@ -42,14 +42,15 @@ iframe { width:100%; height:100%; border:none; display:block; }
 <script>
 /* ================= CONFIG ================= */
 const CHECKLAST_URL = 'https://iznxrukdqbrcxjzhvwyk.supabase.co/functions/v1/checklast4';
-const REGISTER_URL = 'https://iznxrukdqbrcxjzhvwyk.supabase.co/functions/v1/register-device';
-const APP_URL      = 'https://bet-point.appsmith.com/app/signals/page1-68b217383a43874978908b5c?embed=true';
-const deviceType   = /Mobi|Android/i.test(navigator.userAgent) ? 'mobile' : 'web';
+const REGISTER_URL  = 'https://iznxrukdqbrcxjzhvwyk.supabase.co/functions/v1/register-device';
+const APP_URL       = 'https://bet-point.appsmith.com/app/signals/page1-68b217383a43874978908b5c?embed=true';
+const deviceType    = /Mobi|Android/i.test(navigator.userAgent) ? 'mobile' : 'web';
 const ONESIGNAL_APP_ID = "2b94ad70-2518-44d4-aaef-bfb95739206f";
 
 let rowId = null;
 let loginCode = null;
 let checkInterval = null;
+let loginInProgress = false;
 
 /* ================= HELPER ================= */
 function getUrlParam(name) {
@@ -90,10 +91,16 @@ window.addEventListener('DOMContentLoaded', async () => {
 
 /* ================= LOGIN ================= */
 async function submitRowId() {
+  if (loginInProgress) return; // prevent double submissions
+  loginInProgress = true;
+
   const error = document.getElementById('loginError');
   const spinner = document.getElementById('spinner');
   rowId = rowId || document.getElementById('rowIdInput').value.trim();
-  if (!rowId) return;
+  if (!rowId) {
+    loginInProgress = false;
+    return;
+  }
 
   error.textContent = '';
   spinner.style.display = 'block';
@@ -113,7 +120,7 @@ async function submitRowId() {
       return;
     }
 
-    // use server-generated code (no extra insert)
+    // ✅ use server-generated code
     loginCode = data.code;
     localStorage.setItem('rowId', rowId);
     localStorage.setItem('loginCode', loginCode);
@@ -126,6 +133,7 @@ async function submitRowId() {
     error.textContent = 'Server error';
   } finally {
     spinner.style.display = 'none';
+    loginInProgress = false;
   }
 }
 
