--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ iframe { width:100%; height:100%; border:none; display:block; }
   <img src="./icon-1024x1024.png" alt="Logo">
   <h2>Enter Password</h2>
   <input type="password" id="rowIdInput" placeholder="Password">
-  <button onclick="submitRowId()">Submit</button>
+  <button id="loginBtn">Submit</button>
   <div id="loginError"></div>
   <div id="spinner"></div>
 </div>
@@ -42,14 +42,15 @@ iframe { width:100%; height:100%; border:none; display:block; }
 <script>
 /* ================= CONFIG ================= */
 const CHECKLAST_URL = 'https://iznxrukdqbrcxjzhvwyk.supabase.co/functions/v1/checklast4';
-const REGISTER_URL = 'https://iznxrukdqbrcxjzhvwyk.supabase.co/functions/v1/register-device';
-const APP_URL      = 'https://bet-point.appsmith.com/app/signals/page1-68b217383a43874978908b5c?embed=true';
-const deviceType   = /Mobi|Android/i.test(navigator.userAgent) ? 'mobile' : 'web';
+const REGISTER_URL  = 'https://iznxrukdqbrcxjzhvwyk.supabase.co/functions/v1/register-device';
+const APP_URL       = 'https://bet-point.appsmith.com/app/signals/page1-68b217383a43874978908b5c?embed=true';
+const deviceType    = /Mobi|Android/i.test(navigator.userAgent) ? 'mobile' : 'web';
 const ONESIGNAL_APP_ID = "2b94ad70-2518-44d4-aaef-bfb95739206f";
 
 let rowId = null;
 let loginCode = null;
 let checkInterval = null;
+let isSubmitting = false;
 
 /* ================= HELPER ================= */
 function getUrlParam(name) {
@@ -89,22 +90,32 @@ window.addEventListener('DOMContentLoaded', async () => {
 });
 
 /* ================= LOGIN ================= */
-async function submitRowId() {
+async function submitRowId(event) {
+  if (event) event.preventDefault();
+  if (isSubmitting) return; // ✅ Prevent double submissions
+  isSubmitting = true;
+
   const error = document.getElementById('loginError');
   const spinner = document.getElementById('spinner');
   rowId = rowId || document.getElementById('rowIdInput').value.trim();
-  if (!rowId) return;
+  if (!rowId) {
+    isSubmitting = false;
+    return;
+  }
 
   error.textContent = '';
   spinner.style.display = 'block';
 
   try {
-    // ✅ Get the latest code for this row_id
+    // Wait a short delay before fetching latest code
+    await new Promise(res => setTimeout(res, 300)); // 300ms
+
     const res = await fetch(CHECKLAST_URL, {
       method: 'POST',
       headers: { 'Content-Type': 'application/json' },
       body: JSON.stringify({ row_id: rowId })
     });
+
     const data = await res.json();
     console.log("checklast4 response:", data);
 
@@ -125,6 +136,7 @@ async function submitRowId() {
     error.textContent = 'Server error';
   } finally {
     spinner.style.display = 'none';
+    isSubmitting = false;
   }
 }
 
@@ -198,6 +210,13 @@ function initOneSignal(rowId) {
     }
   });
 }
+
+/* ================= ENTER KEY SUBMIT ================= */
+document.getElementById('rowIdInput').addEventListener('keydown', function(e) {
+  if (e.key === 'Enter') submitRowId(e);
+});
+
+document.getElementById('loginBtn').addEventListener('click', submitRowId);
 </script>
 
 </body>
